Bug 107089 - PDF export: pdf images mishandled with multiple page streams with different compression
Summary: PDF export: pdf images mishandled with multiple page streams with different c...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-11 10:23 UTC by Miklos Vajna
Modified: 2017-04-12 09:24 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer document. (19.37 KB, application/vnd.oasis.opendocument.text)
2017-04-11 10:23 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2017-04-11 10:23:16 UTC
Created attachment 132467 [details]
Reproducer document.

See the reproducer document, when exporting that to PDF, the output has a mix of compressed and non-compressed data inside the same object stream, which is invalid.
Comment 1 Commit Notification 2017-04-11 11:51:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9e8598c42a1a6f2fbd88711aa9bea5961eaf7b4a

tdf#107089 PDF export of PDF images: handle mixed filters of page streams

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.